app_build/argocd/aplicacao_completa_appvt121170.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: appvt121170
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appvt121170
    app.kubernetes.io/part-of: appvt121170
  name: appvt121170-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appvt121170
  template:
    metadata:
      labels:
        app: appvt121170
    spec:
      containers:
        - image: default-route-openshift-image-registry.apps.ocplab.vtal.intra/appvt121170/appvt121170:latest
          name: appvt121170
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 200Mi
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: 'random'
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    app: appvt121170
  name: appvt121170-route-2
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appvt121170-svc
    weight: 100
  port:
    targetPort: appvt121170-svc-port
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appvt121170
  name: appvt121170-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appvt121170-svc
    weight: 100
  port:
    targetPort: appvt121170-svc-port
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appvt121170
  name: appvt121170-svc
spec:
  ports:
  - name: appvt121170-svc-port
    port: 5000
    targetPort: 6000
  selector:
    app: appvt121170
